Fix styles on iOS

--- a/public/styles.css
+++ b/public/styles.css
@@ -10,24 +10,25 @@ html {
 
 body {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     background-color: black;
     color: white;
     min-height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-.container {
-    max-width: 800px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    font-size:large;
     min-height: 100vh;
     min-height: -webkit-fill-available;
 }
 
+.container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    font-size:large;
+    flex-grow: 1;
+}
+
 .content {
+    flex-grow: 1;
     flex: 1 0 auto; 
     padding: 20px;
     h1, h2 {
@@ -36,10 +37,11 @@ body {
 }
 
 .footer {
-    flex-shrink: 0; 
     padding: 10px;
     padding-bottom: 30px;
     text-align: center;
+    position: sticky;
+    bottom: 0;
 }
 
 .details{
